--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag gugloplex/alpha-tour-strapi:$(date +%s)
+      run: docker build . --file Dockerfile --tag alpha-tour-strapi:$(date +%s)
 
     - name: Log in to Docker Hub
       uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
@@ -22,4 +22,4 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Push the Docker image
-      run: docker push gugloplex/alpha-tour-strapi:$(date +%s)
+      run: docker push alpha-tour-strapi:$(date +%s)
