--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
   "dependencies": {
+    "@nexide/strapi-provider-bunny": "^1.3.5",
     "@strapi/plugin-cloud": "5.21.0",
+    "@strapi/plugin-seo": "^2.0.8",
     "@strapi/plugin-users-permissions": "5.21.0",
     "@strapi/strapi": "5.21.0",
     "better-sqlite3": "11.3.0",
@@ -23,6 +25,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
+    "strapi-plugin-country-select": "^2.1.0",
     "styled-components": "^6.0.0"
   },
   "devDependencies": {
